@@ -1,4 +1,0 @@
-@set UPDATED 13 August 2017
-@set UPDATED-MONTH August 2017
-@set EDITION 2.3-dev
-@set VERSION 2.3-dev
